--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;700&display=swap');
 
-* {
+/* * {
   box-sizing: border-box;
   font-family: 'Nunito Sans', sans-serif;
   color: #fff;
@@ -12,4 +12,4 @@ body,
   height: 100%;
   margin: 0;
   background: #2a2a2a;
-}
+} */
